rholang-tree-sitter/test/corpus/coat_check.txt
==========
Coat check
==========

new MakeCoatCheck in {
    contract MakeCoatCheck(ret) = {
      new port, table in {
        ret!(*port) |
        for(@"new", @arg, ack <= port) {
          new ticket in {
            ack!(*ticket) |
            @{*ticket | *table}!(arg)
          }
        } |
        for(@"get", @arg, ack <= port) {
          for (@value <- @{arg | *table}) {
            @{arg | *table}!(value) |
            ack!(value)
          }
        } |
        for(@"set", @arg1, @arg2, ack <= port) {
          for (_ <- @{arg1 | *table}) {
            @{arg1 | *table}!(arg2) |
            ack!(true)
          }
        }
      }
    } |

  // Usage
  new ret, get, set in {
    MakeCoatCheck!(*ret) |
    for (cc <- ret) {

      cc!("new", 0, *ret) |
      for (ticket <- ret) {
        contract get(return) = { cc!("get", *ticket, *return) } |
        contract set(@value, return) = { cc!("set", *ticket, value, *return) } |

        get!(*ret) | for(@r <- ret) {
          //r is equal to 1
          set!(1, *ret) | for(_ <- ret) {
            get!(*ret) | for(@r <- ret) {
              //r is equal to 1
              Nil
            }
          }
        }
        }
      }
    }
}

---

(source_file
  (new
    decls: (name_decls
      (name_decl
        (var)))
    proc: (block
      (par
        (contract
          name: (var)
          formals: (names
            (var))
          proc: (block
            (new
              decls: (name_decls
                (name_decl
                  (var))
                (name_decl
                  (var)))
              proc: (block
                (par
                  (par
                    (par
                      (send
                        channel: (var)
                        send_type: (send_single)
                        inputs: (send_inputs
                          data: (send_data
                            (eval
                              (var)))))
                      (input
                        receipts: (receipts
                          (receipt
                            (repeated_bind
                              names: (names
                                (quote
                                  (string_literal))
                                (quote
                                  (var))
                                (var))
                              input: (var))))
                        proc: (block
                          (new
                            decls: (name_decls
                              (name_decl
                                (var)))
                            proc: (block
                              (par
                                (send
                                  channel: (var)
                                  send_type: (send_single)
                                  inputs: (send_inputs
                                    data: (send_data
                                      (eval
                                        (var)))))
                                (send
                                  channel: (quote
                                    (block
                                      (par
                                        (eval
                                          (var))
                                        (eval
                                          (var)))))
                                  send_type: (send_single)
                                  inputs: (send_inputs
                                    data: (send_data
                                      (var))))))))))
                    (input
                      receipts: (receipts
                        (receipt
                          (repeated_bind
                            names: (names
                              (quote
                                (string_literal))
                              (quote
                                (var))
                              (var))
                            input: (var))))
                      proc: (block
                        (input
                          receipts: (receipts
                            (receipt
                              (linear_bind
                                names: (names
                                  (quote
                                    (var)))
                                input: (simple_source
                                  (quote
                                    (block
                                      (par
                                        (var)
                                        (eval
                                          (var)))))))))
                          proc: (block
                            (par
                              (send
                                channel: (quote
                                  (block
                                    (par
                                      (var)
                                      (eval
                                        (var)))))
                                send_type: (send_single)
                                inputs: (send_inputs
                                  data: (send_data
                                    (var))))
                              (send
                                channel: (var)
                                send_type: (send_single)
                                inputs: (send_inputs
                                  data: (send_data
                                    (var))))))))))
                  (input
                    receipts: (receipts
                      (receipt
                        (repeated_bind
                          names: (names
                            (quote
                              (string_literal))
                            (quote
                              (var))
                            (quote
                              (var))
                            (var))
                          input: (var))))
                    proc: (block
                      (input
                        receipts: (receipts
                          (receipt
                            (linear_bind
                              names: (names
                                (wildcard))
                              input: (simple_source
                                (quote
                                  (block
                                    (par
                                      (var)
                                      (eval
                                        (var)))))))))
                        proc: (block
                          (par
                            (send
                              channel: (quote
                                (block
                                  (par
                                    (var)
                                    (eval
                                      (var)))))
                              send_type: (send_single)
                              inputs: (send_inputs
                                data: (send_data
                                  (var))))
                            (send
                              channel: (var)
                              send_type: (send_single)
                              inputs: (send_inputs
                                data: (send_data
                                  (bool_literal))))))))))))))
        (new
          decls: (name_decls
            (name_decl
              (var))
            (name_decl
              (var))
            (name_decl
              (var)))
          proc: (block
            (par
              (send
                channel: (var)
                send_type: (send_single)
                inputs: (send_inputs
                  data: (send_data
                    (eval
                      (var)))))
              (input
                receipts: (receipts
                  (receipt
                    (linear_bind
                      names: (names
                        (var))
                      input: (simple_source
                        (var)))))
                proc: (block
                  (par
                    (send
                      channel: (var)
                      send_type: (send_single)
                      inputs: (send_inputs
                        data: (send_data
                          (string_literal)
                          (long_literal)
                          (eval
                            (var)))))
                    (input
                      receipts: (receipts
                        (receipt
                          (linear_bind
                            names: (names
                              (var))
                            input: (simple_source
                              (var)))))
                      proc: (block
                        (par
                          (par
                            (par
                              (contract
                                name: (var)
                                formals: (names
                                  (var))
                                proc: (block
                                  (send
                                    channel: (var)
                                    send_type: (send_single)
                                    inputs: (send_inputs
                                      data: (send_data
                                        (string_literal)
                                        (eval
                                          (var))
                                        (eval
                                          (var)))))))
                              (contract
                                name: (var)
                                formals: (names
                                  (quote
                                    (var))
                                  (var))
                                proc: (block
                                  (send
                                    channel: (var)
                                    send_type: (send_single)
                                    inputs: (send_inputs
                                      data: (send_data
                                        (string_literal)
                                        (eval
                                          (var))
                                        (var)
                                        (eval
                                          (var))))))))
                            (send
                              channel: (var)
                              send_type: (send_single)
                              inputs: (send_inputs
                                data: (send_data
                                  (eval
                                    (var))))))
                          (input
                            receipts: (receipts
                              (receipt
                                (linear_bind
                                  names: (names
                                    (quote
                                      (var)))
                                  input: (simple_source
                                    (var)))))
                            proc: (block
                              (par
                                (send
                                  channel: (var)
                                  send_type: (send_single)
                                  inputs: (send_inputs
                                    data: (send_data
                                      (long_literal)
                                      (eval
                                        (var)))))
                                (input
                                  receipts: (receipts
                                    (receipt
                                      (linear_bind
                                        names: (names
                                          (wildcard))
                                        input: (simple_source
                                          (var)))))
                                  proc: (block
                                    (par
                                      (send
                                        channel: (var)
                                        send_type: (send_single)
                                        inputs: (send_inputs
                                          data: (send_data
                                            (eval
                                              (var)))))
                                      (input
                                        receipts: (receipts
                                          (receipt
                                            (linear_bind
                                              names: (names
                                                (quote
                                                  (var)))
                                              input: (simple_source
                                                (var)))))
                                        proc: (block
                                          (nil))))))))))))))))))))))
