rholang-tree-sitter/test/corpus/collections.txt
=======
Collections
=======

{[1,2,3]}
{Set(1,2,3)}
{{"key1":123}}
{(1,"2")}
{{|"val1","val2"|}}


---

(source_file
  (block
    (collection
      (list
        (long_literal)
        (long_literal)
        (long_literal))))
  (block
    (collection
      (set
        (long_literal)
        (long_literal)
        (long_literal))))
  (block
    (collection
      (map
        (key_value_pair
          key: (string_literal)
          value: (long_literal)))))
  (block
    (collection
      (tuple
        (long_literal)
        (string_literal))))
  (block
    (collection
      (pathmap
        (string_literal)
        (string_literal)))))
